src/objects/InfoportServiceConnection__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Authentication_Token__c</fullName>
        <label>Authentication Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_URL__c</fullName>
        <label>Connection URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Session_Timeout__c</fullName>
        <label>Session Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>InfoportServiceConnection</label>
</CustomObject>